--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,6 @@ name = "web-chat"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
-readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -16,6 +15,12 @@ pydantic = "^2.5.1"
 passlib = "^1.7.4"
 pyjwt = "^2.8.0"
 python-jose = "^3.3.0"
+websockets = "^12.0"
+mypy = "^1.7.0"
+flake8 = "^6.1.0"
+black = "^23.11.0"
+isort = "^5.12.0"
+types-python-jose = "^3.3.4.8"
 
 
 [build-system]
