--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:123@localhost/web_chat
+sqlalchemy.url = postgresql://postgres:123@db:5532/web_chat
 
 
 [post_write_hooks]
